--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "devDependencies": {
         "@popperjs/core": "^2.11.6",
         "@vitejs/plugin-vue": "^4.0.0",
-        "axios": "^1.6.1",
+        "axios": "^1.6.3",
         "bootstrap": "^5.2.3",
         "laravel-vite-plugin": "^0.8.0",
         "sass": "^1.56.1",
         "vite": "^4.0.0",
         "vue": "^3.2.37"
+    },
+    "dependencies": {
+        "vue-axios": "^3.5.2"
     }
 }
